[package]
name = "utcnow"
version = "0.0.0-pre4"
edition = "2018"
readme = "README.md"
categories = ["date-and-time", "no-std"]
keywords = ["time", "unixtime", "utc", "no_std", "cross-platform"]
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/utcnow"
description = "[WIP] Get the current unixtime in a no-std context"
license = "Apache-2.0"

[features]
default = ["std", "fallback"]
fallback = []
std = []

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "ios", target_os = "linux", target_os = "macos", target_os = "openbsd", target_os = "redox"))'.dependencies]
rustix = { version = "0.35.7", features = ["time"] }

[target.'cfg(any(target_os = "darwin", target_os = "emscripten", target_os = "illumos", target_os = "netbsd"))'.dependencies]
errno = { version = "0.2.8", default-features = false }
libc = { version = "0.2.126", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["sysinfoapi"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = { version = "0.11.0", default-features = false }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.31"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
